tests/miz/fail/parser/fail_parser_conclusions_iterative_recovery_001.miz
then let x be set;
thus by A;
x = by A .= z by B;
x = y by A .= by B;
x = y by A .= z by computation(steps: 1);
